Fix HTML formatting and update image source

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 	
 	<body>
 		<div class="Homepage">
-			<img class="homepage_image" src="WS_homepage.webp" alt="Word Switch logo">
+			<img class="homepage_image" src="WS_Homepage.webp" alt="Word Switch logo">
 			<h1 id="Title"><span class="red">Word</span><span class="blue">Switch</span></h1>
 			<a class="Button-1" href="Create.html">Create</a>
             <a class="Button-2" href="Join.html">Join</a>
 		</div>
 	</body>
 </html>
+
