--- a/Create.html
+++ b/Create.html
@@ -12,7 +12,7 @@
 	<body>
 	
 		<div class="top">
-			<img class="create_image" src="WS_homepage.webp" alt="Word Switch logo">
+			<img class="create_image" src="WS_Homepage.webp" alt="Word Switch logo">
 		</div>
 	
 		<div class="middle">
@@ -100,4 +100,5 @@
 		</div>
 		<script src="WS.js"></script>
 	</body>
+
 </html>
