Fix image source in Join.html

--- a/Join.html
+++ b/Join.html
@@ -11,7 +11,7 @@
 	
 	<body>
 		<div class="top">
-			<img class="create_image" src="WS_homepage.webp" alt="Word Switch logo">
+			<img class="create_image" src="WS_Homepage.webp" alt="Word Switch logo">
 		</div>
 		<div class="middle">
 			<h1>Join a Game</h1>
@@ -33,4 +33,5 @@
 		</div>
     <script src="Join.js"></script>
 	</body>
+
 </html>
