--- a/Join.html
+++ b/Join.html
@@ -40,7 +40,8 @@
 </script>
 
 <!-- Lobby JS -->
-<script type="module" src="game.js"></script>
+<script type="module" src="WS-firebase.js"></script>
 
 </body>
 </html>
+
