Update script source for lobby JS to Join.js

--- a/Join.html
+++ b/Join.html
@@ -40,8 +40,9 @@
 </script>
 
 <!-- Lobby JS -->
-<script type="module" src="WS-firebase.js"></script>
+<script type="module" src="Join.js"></script>
 
 </body>
 </html>
+
 
