Refactor Create.html for room creation and Firebase
Updated the Create.html file to include Firebase SDK and improve the structure of the room creation form.

--- a/Create.html
+++ b/Create.html
@@ -97,6 +97,7 @@ const database = getDatabase(app);
 window.firebaseDatabase = database;
 </script>
 
-<script type="module" src="create.js"></script>
+<script type="module" src="Create.js"></script>
 </body>
 </html>
+
