Refactor Game.html for improved structure and styling
Updated the HTML structure and styles for the Word Switch Game, including new links to CSS and favicon, and improved layout for better user experience.

--- a/Game.html
+++ b/Game.html
@@ -4,100 +4,64 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Word Switch Game</title>
+<link rel="stylesheet" href="WS.css">
+<link rel="icon" type="image/x-icon" href="WS.ico">
 <style>
-    body { font-family: Arial, sans-serif; background: #f2f2f2; padding: 20px; }
-    .container { max-width: 700px; margin: auto; background: white; padding: 20px; border-radius: 10px; }
-    h1, h2 { text-align: center; }
-    .word { display: inline-block; margin: 2px; padding: 5px 10px; border-radius: 5px; cursor: pointer; background: #ddd; }
-    .selected { background: #ffcccb; }
-
-    /* Blanks styling */
-    .blanks span {
-		display: inline-block;       /* allow width to fit content */
-		padding: 5px 10px;           /* spacing around text */
-		margin: 5px;
-		border-bottom: 2px solid black;
-		font-weight: bold;
-		font-size: 16px;
-		min-width: 40px;             /* small minimum width */
-		max-width: 300px;            /* optional max width */
-		white-space: nowrap;         /* prevent word wrapping */
-		text-align: center;
-	}
-	
-	.word-span {
-    display: inline-block;
-    padding: 5px 10px;
-    margin: 2px;
-    border-bottom: 2px solid black;
-    min-width: 30px;
-    white-space: nowrap;
-    text-align: center;
-    font-weight: bold;
-}
-
-    /* Draggable words container */
-    #draggables-container {
-        display: flex;
-        flex-wrap: wrap;
-        margin-top: 10px;
-    }
-
-    .draggable-word {
-        display: inline-block;
-        margin: 5px;
-        padding: 5px 10px;
-        border-radius: 5px;
-        background: #ddd;
-        cursor: grab;
-        font-size: 16px;
-    }
-
-    input { margin: 5px 0; padding: 5px; width: 100%; }
-    button { margin-top: 10px; padding: 10px 15px; cursor: pointer; }
+body { font-family: Arial, sans-serif; background: #f2f2f2; padding: 20px; }
+.container { max-width: 800px; margin: auto; background: white; padding: 20px; border-radius: 10px; }
+h1, h2 { text-align: center; }
+.word, .draggable-word { display: inline-block; margin: 2px; padding: 5px 10px; border-radius: 5px; cursor: pointer; background: #ddd; }
+.selected { background: #ffcccb; }
+.blanks span { display: inline-block; width: 120px; margin: 2px; border-bottom: 2px solid black; text-align: center; }
+input { margin: 5px 0; padding: 5px; width: 100%; }
+button { margin-top: 10px; padding: 10px 15px; cursor: pointer; }
 </style>
 </head>
 <body>
+
 <div class="container">
     <h1>Word Switch Game</h1>
+
+    <!-- Round info -->
     <div id="round-info">
         <p>Round: <span id="round-number">1</span></p>
         <p>Current Player: <span id="current-player">Player 1</span></p>
     </div>
 
-    <!-- Writer Section -->
+    <!-- Writer section -->
     <div id="writer-section">
         <h2>Write your sentence</h2>
         <textarea id="sentence-input" rows="3" placeholder="Write a sentence..."></textarea><br>
         <button id="submit-sentence">Submit Sentence</button>
     </div>
 
-    <!-- Word Selection -->
+    <!-- Word selection -->
     <div id="selection-section" style="display:none;">
         <h2>Select words to remove</h2>
         <div id="words-container"></div>
         <button id="finish-selection">Finish Selection</button>
     </div>
 
-    <!-- Fake Word Submission -->
+    <!-- Fake word submission -->
     <div id="fake-word-section" style="display:none;">
-        <h2>Submit fake words</h2>
+        <h2>Submit your fake words</h2>
         <div id="fake-word-inputs"></div>
         <button id="submit-fakes">Submit Fake Words</button>
     </div>
 
-    <!-- Drag-and-Drop Reveal -->
+    <!-- Drag-and-drop section -->
     <div id="drag-section" style="display:none;">
         <h2>Fill in the blanks</h2>
         <div class="blanks" id="blanks-container"></div>
-        <div id="draggables-container"></div>
+        <div id="draggables-container" style="margin-top:10px;"></div>
         <button id="submit-drag">Submit Answers</button>
     </div>
 
-    <!-- Reveal Results -->
+    <!-- Reveal results -->
     <div id="results-section" style="display:none;">
         <h2>Round Results</h2>
-        <p id="revealed-sentence"></p>
+        <div id="revealed-sentence"></div>
+        <div id="player-submissions"></div>
         <button id="next-round">Next Round</button>
     </div>
 
@@ -108,6 +72,6 @@
     </div>
 </div>
 
-<script src="game.js"></script>
+<script type="module" src="game.js"></script>
 </body>
 </html>
