Fix HTML encoding issues in Game.html

--- a/Game.html
+++ b/Game.html
@@ -72,6 +72,7 @@ button { margin-top: 10px; padding: 10px 15px; cursor: pointer; }
     </div>
 </div>
 
-<script type="module" src="game.js"></script>
+<script type="module" src="Game.js"></script>
 </body>
 </html>
+
