--- a/Game.html
+++ b/Game.html
@@ -72,6 +72,7 @@
 </div>
 
 <script type="module" src="WS-firebase.js"></script>
-<script type="module" src="game.js"></script>
+<script type="module" src="Game.js"></script>
 </body>
 </html>
+
