Fix HTML structure and add module type to scripts

--- a/Create.html
+++ b/Create.html
@@ -89,7 +89,8 @@
         <a class="Button-1" href="Game.html" id="create-room-btn">Create Game</a>
     </div>
 
-    <script src="WS-firebase.js"></script>
-    <script src="Create.js"></script>
+    <script src="WS-firebase.js" type="module"></script>
+    <script src="Create.js" type="module"></script>
 </body>
 </html>
+
