Change 'Create Game' link to button
Updated the Create.html file to change the 'Create Game' link to a button and added necessary HTML structure.

--- a/Create.html
+++ b/Create.html
@@ -86,11 +86,12 @@
     </div>
 
     <div class="bottom">
-        <a class="Button-1" href="Game.html" id="create-room-btn">Create Game</a>
+        <button id="create-room-btn">Create Game</button>
     </div>
 
     <script src="WS-firebase.js" type="module"></script>
     <script src="Create.js" type="module"></script>
 </body>
 </html>
+
 
