Integrate Firebase in Create.html
Added Firebase script to Create.html for backend integration.

--- a/Create.html
+++ b/Create.html
@@ -68,5 +68,7 @@
     </div>
 
     <script type="module" src="Create.js"></script>
+    <script type="module" src="WS-firebase.js"></script>
 </body>
 </html>
+
