Add script tag for WS-firebase.js
Added a script tag for WS-firebase.js to the body.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 			<a class="Button-1" href="Create.html">Create</a>
             <a class="Button-2" href="Join.html">Join</a>
 		</div>
+	<script type="module" src="WS-firebase.js"></script>
 	</body>
 </html>
+
 
